--- a/main.tex
+++ b/main.tex
@@ -63,10 +63,10 @@
 \name{Savindi Wijenayaka}
 \tagline{Machine Learning Engineer \& Researcher}
 %% You can add multiple photos on the left or right
-\photoR{3cm}{profile-photo}
+% \photoR{3cm}{profile-photo}
 
 \personalinfo{%
-  \expandafter\ifstrequal\expandafter{\jobname}{nadundesilva-cv}
+  \expandafter\ifstrequal\expandafter{\jobname}{savindi-cv}
   {
   \printinfo{\faMapMarker*}{Auckland, New Zealand}
   \printinfo{\faGlobe}{https://savindi.carrd.co}[savindi.carrd.co]\\
@@ -95,7 +95,7 @@
 
 \cvsection{Summary}
 
-A Machine Learning Engineer and a Researcher with 2+ years of experience in applied machine learning research and net-centric application development. Currently working towards a Ph.D. in Bioengineering to contribute to the advancement of Healthcare with the aid of Artificial Intelligence (AI). Background in computer vision, natural language processing (NLP), development and deployment of cloud native applications in production environments. As a lifelong learner and AI enthusiast, I have guided university students in various occasions with one-to-one meetings, webinars and Medium articles. Looking to utilise my skills and grow in a stimulating and collaborative environment of the University of Auckland as a Graduate Teaching Assistant.
+A Machine Learning Engineer and a Researcher with 2+ years of experience in applied machine learning research and cloud-native application development. Background in computer vision, natural language processing (NLP), development and deployment of production-grade applications. Currently working towards a Ph.D. in Bioengineering to contribute to the advancement of Healthcare with the aid of Artificial Intelligence (AI). As a lifelong learner and AI enthusiast, I have guided university students on various occasions with one-to-one meetings, webinars and Medium articles. Looking to utilise my skills and grow in a stimulating and collaborative environment at the University of Auckland as a Graduate Teaching Assistant.
 
 \medskip
 
@@ -103,10 +103,10 @@ A Machine Learning Engineer and a Researcher with 2+ years of experience in appl
 
 \cvevent{Machine Learning Engineer}{\href{http://www.wso2.com}{WSO2}}{Sept 2020 - Nov 2021}{Colombo, Sri Lanka}   % chktex 8
 \begin{itemize}
-    \item WSO2 is the world's no.1 open-source integration vendor, providing an enterprise platform for integrating application programming interfaces, applications, and web services locally and across the Internet.
-    \item Researched, engineered and deployed the Choreo's AI assisted testing feature (phase 1), using Python, Keras, Flask, Kubernetes and Azure DevOps pipelines.
+    \item WSO2 is one of the world's leading open-source integration vendors, providing an enterprise platform for integrating application programming interfaces, applications, and web services locally and across the Internet.
+    \item Researched, engineered and deployed the Choreo's AI-assisted testing feature (phase 1), using Python, Keras, Flask, Kubernetes and Azure DevOps pipelines.
     \item Architected, developed and deployed Choreo's AI anomaly detector, with two other engineers, using Azure solutions, Ballerina, and Python, while adhering to security best practices, scaling requirements, and optimized resource usage.
-    \item Analyzed Ballerina Language Server performance and identified the cause of a memory leak, using Jmeter and Eclipse Memory Analyzer (MAT), which helped in optimization of resources in Choreo.
+    \item Analyzed Ballerina Language Server performance and identified the cause of a memory leak, using Jmeter and Eclipse Memory Analyzer (MAT), which helped in the optimization of resources in Choreo.
     \item Implemented a library and a pipeline for automating the performance testing of Choreo using Python, Kusto, Seaborn, and Azure DevOps pipelines.
 \end{itemize}
 
@@ -114,11 +114,11 @@ A Machine Learning Engineer and a Researcher with 2+ years of experience in appl
 
 \cvevent{Software Research Engineer (Intern)}{\href{https://www.pearson.com/}{Pearson}}{Sept 2018 - Sept 2019}{Colombo, Sri Lanka}   % chktex 8
 \begin{itemize}
-    \item Pearson is the world's leading Education company, providing curriculum materials, multimedia learning tools, and testing programs to help in educating millions of people worldwide.
-    \item Collaborated with two other engineers to create the minimal viable product of AI-based Public Speaking Evaluator Service (APSES), while contributing to emotion detection and speech analysis features, using Python, Keras, OpenCV, Kaldi and Flask.
+    \item Pearson is one of the world's leading Education companies, providing curriculum materials, multimedia learning tools, and testing programs to help in educating millions of people worldwide.
+    \item Collaborated with two other engineers to create the minimum viable product of AI-based Public Speaking Evaluator Service (APSES), while contributing to emotion detection and speech analysis features, using Python, Keras, OpenCV, Kaldi and Flask.
     \item Designed and developed the user interface for the APSES.
-    \item Researched and engineered the minimal viable product of Question and Answering Chatbot, which answer students questions based on Pearson books and other documentation, using modified version of Bi-Directional Attention Flow (BiDAF) model, Python and Django.
-    \item Researched and engineered the minimal viable product of Document Classifier, which automatically classify flashcards created by system or users under available topics, using Universal Language Model Fine-Tuning (ULMFiT) model, Python and Django.
+    \item Investigated on Question and Answering and built the minimal viable product of a Chatbot, which answers students' questions based on Pearson books and other documentation, using a modified version of the Bi-Directional Attention Flow (BiDAF) model, Python and Django.
+    \item Researched and engineered the minimal viable product of Document Classifier, which automatically classifies flashcards created by system or users under available topics, using the Universal Language Model Fine-Tuning (ULMFiT) model, Python and Django.
 \end{itemize}
 
 \cvsection{Skills}
@@ -138,19 +138,21 @@ A Machine Learning Engineer and a Researcher with 2+ years of experience in appl
 
 \cvevent{Ph.D. in Bioengineering}{University of Auckland}{Dec 2021 - Present}{Auckland, New Zealand}   % chktex 8
 \begin{itemize}
-    \item Analysing micro structures of Gastrointestinal sphincters and creating computational models with the aid of deep learning, to benefit in silico experiments in the future.
+    \item Analysing microstructures of Gastrointestinal sphincters and creating computational models with the aid of deep learning, to benefit in silico experiments in the future.
 \end{itemize}
 
 \divider{}
 
 \cvevent{B.Sc. (Hons.) in Software Engineering}{University of Kelaniya}{Feb 2016 - March 2020}{Colombo, Sri Lanka}   % chktex 8
 \begin{itemize}
-    \item Specialised in Data Science and Net centric application development
+    \item Specialised in Data Science and Net-centric application development
     \item Attained a GPA of 3.96 out of 4.00, obtaining a First Class.
     \item Placements in Dean’s List in all 4 academic years.
-    \item Member (2016-2018) and Womens' Team Captain (2018) in University Karate team, winning national and SLUG medals along with SLUSA and University Colours for Karate. 
-    \item Lead the Marketing and Communication function of AIESEC in University of Kelaniya as the Local Committee Vice President, achieving 112\% average growth in social media and completing 10+ successful event promotions, while contributing to the growth of other functions by handling the promotional aspects of them.
+    \item Member (2016-2018) and Womens' Team Captain (2018) in University Karate team, winning national and Inter-university medals while being recognized with Sri Lankan University Sports Association Merits and University Merits. 
+    \item Lead the Marketing and Communication function of AIESEC in University of Kelaniya as the Local Committee Vice President, achieving 112\% average growth in social media and completing 20+ successful event promotions while contributing to the growth of other functions by handling the promotional aspects of them.
     \item Managed the financial and budgeting aspects as the organizing committee finance lead in RealHack 2.0 Inter-University Hackathon 
+    \item Awarded as the 4th Place team in DataStorm 2020 Datathon organized by Octave (JKH Centre of Excellence for Big Data Analytics) and University of Moratuwa
+    \item Became the 1st Runner Up team in HackaDev - Matara 2017 (National Youth Software Competition) organized by UNDP-Sri Lanka
 \end{itemize}
 
 \cvsection{Certifications}
@@ -162,20 +164,23 @@ A Machine Learning Engineer and a Researcher with 2+ years of experience in appl
 \end{itemize}
 
 \smallskip
-\cvsection{Academic Competitions}
+\cvsection{Extra-curricular}
 \begin{itemize}
-    \item 4th Place : DataStorm 2020 Datathon organized by Octave (JKH Centre of Excellence for Big Data Analytics) and University of Moratuwa
-    \item 1st Runner Up : HackaDev - Matara 2017 (National Youth Software Competition) organized by UNDP-Sri Lanka
-    \item Semi-Finalist : UOJ Hack 2017 (University of Jaffna and UNDP-Sri Lanka) and iHack 3.0 (University of Colombo School of Computing)
+    \item Awarded black belt in Karate.
+    \item Achieved the Gold medal for Chess in Four Nations Championship 2019 organized by Pearson.
+    \item Represented secondary school at the national level for Karate, Carrom, Kabbadi and as an Army Cadet. 
+    \item Competed in Wushu, Volleyball, Swimming, Chess and Soccer during inter-house sport meets, winning various medals.
+    \item Won awards in inter-house drama and art competitions in secondary school.
+    \item Held various leadership positions in the secondary school as a junior prefect, senior prefect and Karate captain.
 \end{itemize}
 
 \smallskip
 
 \cvsection{Volunteer and Webinar hosting}
 \begin{itemize}
-    \item Member of the teaching team for Code In Place 2021, an online Python course offered by Stanford University during the COVID-19 pandemic. It brought together 12,000 students and 1100 volunteer teachers participating from around the world.
-    \item Guess speaker of IEEE Hobnobbers 2021, sharing knowledge on the topic ``A dive into deep learning``
-    \item Guess speaker of Pie \& AI Sri Lankan session, organized by DeepLearning.AI, sharing knowledge on the topic ``An Introduction to AI and Machine Learning - Sinhala``
+    \item Member of the teaching team for Code In Place 2021, an online Python course offered by Stanford University during the COVID-19 pandemic. 
+    \item Guest speaker of IEEE Hobnobbers 2021, sharing knowledge on the topic ``A dive into deep learning``
+    \item Guest speaker of Pie \& AI Sri Lankan session, organized by DeepLearning.AI, sharing knowledge on the topic ``An Introduction to AI and Machine Learning - Sinhala``
 \end{itemize}
 
 \smallskip
