--- a/main.tex
+++ b/main.tex
@@ -95,36 +95,37 @@
 
 \cvsection{Summary}
 
-A Machine Learning Engineer and a Researcher with 2+ years of experience in applied machine learning research and cloud-native application development. Background in computer vision, natural language processing (NLP), development and deployment of production-grade applications. Currently working towards a Ph.D. in Bioengineering to contribute to the advancement of Healthcare with the aid of Artificial Intelligence (AI). As a lifelong learner and AI enthusiast, I have guided university students on various occasions with one-to-one meetings, webinars and Medium articles. Looking to utilise my skills and grow in a stimulating and collaborative environment at the University of Auckland as a Graduate Teaching Assistant.
+A Machine Learning Engineer and a Researcher with 2+ years of experience in applied machine learning research and production-grade cloud-native application development. Currently working towards a Ph.D. in Bioengineering to contribute to the advancement of healthcare with the aid of Artificial Intelligence (AI). As an AI and technology enthusiast, I have guided university students on various occasions with one-to-one meetings, webinars and Medium articles.
 
-\medskip
+\bigskip
 
 \cvsection{Experience}
 
 \cvevent{Machine Learning Engineer}{\href{http://www.wso2.com}{WSO2}}{Sept 2020 - Nov 2021}{Colombo, Sri Lanka}   % chktex 8
 \begin{itemize}
-    \item WSO2 is one of the world's leading open-source integration vendors, providing an enterprise platform for integrating application programming interfaces, applications, and web services locally and across the Internet.
-    \item Researched, engineered and deployed the Choreo's AI-assisted testing feature (phase 1), using Python, Keras, Flask, Kubernetes and Azure DevOps pipelines.
-    \item Architected, developed and deployed Choreo's AI anomaly detector, with two other engineers, using Azure solutions, Ballerina, and Python, while adhering to security best practices, scaling requirements, and optimized resource usage.
-    \item Analyzed Ballerina Language Server performance and identified the cause of a memory leak, using Jmeter and Eclipse Memory Analyzer (MAT), which helped in the optimization of resources in Choreo.
-    \item Implemented a library and a pipeline for automating the performance testing of Choreo using Python, Kusto, Seaborn, and Azure DevOps pipelines.
+    \item WSO2 is one of the world's leading open-source integration vendors. Choreo is its latest product providing an AI-enhanced integrated platform as a service. 
+    \item Researched, engineered and deployed the initial phase of Choreo's AI-assisted testing feature, using Python, Keras, Flask, Kubernetes and Azure DevOps pipelines.
+    \item Architected, developed and deployed Choreo’s AI-based anomaly detector with two other engineers, using Azure solutions, Ballerina, and Python, while adhering to security best practices, scaling requirements, and optimised resource usage.
+    \item Analysed Ballerina Language Server performance and identified the cause of a memory leak using JMeter and Eclipse Memory Analyser (MAT), which helped in the optimisation of resources in Choreo.
+    \item Contributed to automating the performance testing of Choreo by creating a library and a pipeline for system metrics collection using Python, Kusto, Seaborn, and Azure DevOps pipelines.
 \end{itemize}
 
 \divider{}
 
 \cvevent{Software Research Engineer (Intern)}{\href{https://www.pearson.com/}{Pearson}}{Sept 2018 - Sept 2019}{Colombo, Sri Lanka}   % chktex 8
 \begin{itemize}
-    \item Pearson is one of the world's leading Education companies, providing curriculum materials, multimedia learning tools, and testing programs to help in educating millions of people worldwide.
-    \item Collaborated with two other engineers to create the minimum viable product of AI-based Public Speaking Evaluator Service (APSES), while contributing to emotion detection and speech analysis features, using Python, Keras, OpenCV, Kaldi and Flask.
-    \item Designed and developed the user interface for the APSES.
+    \item Pearson is a leading Education provider, offering curriculum materials, multimedia learning tools, and testing programs to help educate people worldwide.
+    \item Collaborated with two other engineers to create the minimum viable product of AI-based Public Speaking Evaluator Service (APSES) while contributing to emotion detection and speech analysis features, using Python, Keras, OpenCV, Kaldi and Flask.
     \item Investigated on Question and Answering and built the minimal viable product of a Chatbot, which answers students' questions based on Pearson books and other documentation, using a modified version of the Bi-Directional Attention Flow (BiDAF) model, Python and Django.
-    \item Researched and engineered the minimal viable product of Document Classifier, which automatically classifies flashcards created by system or users under available topics, using the Universal Language Model Fine-Tuning (ULMFiT) model, Python and Django.
+    \item Researched and engineered the minimal viable product which automatically classifies flashcards created by the system or users under available topics, using the Universal Language Model Fine-Tuning (ULMFiT) model, Python and Django.
 \end{itemize}
+
+\medskip
 
 \cvsection{Skills}
 
 \begin{itemize}
-    \item \textbf{Knowledge Areas } --- Deep Learning (Vision \& NLP)
+    \item \textbf{Knowledge Areas } --- Deep learning (Vision \& NLP)
     \item \textbf{Programming languages} --- Python, Ballerina, Java SE, Bash
     \item \textbf{Frameworks and tools} --- Flask, TensorFlow, Numpy, Pandas, Keras, Springboot, Git, Agile
     \item \textbf{DevOps} --- Linux, Azure, Kubernetes, Docker, Kustomize, JMeter
@@ -132,13 +133,13 @@ A Machine Learning Engineer and a Researcher with 2+ years of experience in appl
 
 \pagebreak
 
-% \smallskip
+% \medskip
 
 \cvsection{Education}
 
 \cvevent{Ph.D. in Bioengineering}{University of Auckland}{Dec 2021 - Present}{Auckland, New Zealand}   % chktex 8
 \begin{itemize}
-    \item Analysing microstructures of Gastrointestinal sphincters and creating computational models with the aid of deep learning, to benefit in silico experiments in the future.
+    \item Analysing microstructures of Gastrointestinal sphincters and creating computational models with the aid of deep learning to benefit in silico experiments in the future.
 \end{itemize}
 
 \divider{}
@@ -147,43 +148,34 @@ A Machine Learning Engineer and a Researcher with 2+ years of experience in appl
 \begin{itemize}
     \item Specialised in Data Science and Net-centric application development
     \item Attained a GPA of 3.96 out of 4.00, obtaining a First Class.
-    \item Placements in Dean’s List in all 4 academic years.
-    \item Member (2016-2018) and Womens' Team Captain (2018) in University Karate team, winning national and Inter-university medals while being recognized with Sri Lankan University Sports Association Merits and University Merits. 
-    \item Lead the Marketing and Communication function of AIESEC in University of Kelaniya as the Local Committee Vice President, achieving 112\% average growth in social media and completing 20+ successful event promotions while contributing to the growth of other functions by handling the promotional aspects of them.
-    \item Managed the financial and budgeting aspects as the organizing committee finance lead in RealHack 2.0 Inter-University Hackathon 
-    \item Awarded as the 4th Place team in DataStorm 2020 Datathon organized by Octave (JKH Centre of Excellence for Big Data Analytics) and University of Moratuwa
-    \item Became the 1st Runner Up team in HackaDev - Matara 2017 (National Youth Software Competition) organized by UNDP-Sri Lanka
+    \item Placements in Dean’s List in all four academic years.
+    \item Member (2016-2018) and women's team captain (2018) in University Karate team, winning national and inter-university medals with merits. 
+    \item Lead the Marketing and Communication function of AIESEC in University of Kelaniya as the vice president (2018) to increase the growth rate.
+    \item Managed the financial and budgeting aspects as the organising committee finance lead in RealHack 2019 inter-university hackathon 
+    \item Awarded as the 4th Place team in DataStorm 2020 datathon organised by Octave (JKH Centre of Excellence for Big Data Analytics) and University of Moratuwa
+    \item Became the 1st Runner Up team in National Youth Software Competition 2017 organised by UNDP-Sri Lanka
 \end{itemize}
+
+\medskip
 
 \cvsection{Certifications}
 
 \begin{itemize}
-    \item \cvevent{Deep Learning Specialization}{DeepLearning.AI}{December 2020}{}
     \item \cvevent{AI for Medical Diagnosis}{DeepLearning.AI}{May 2021}{}
-    \item \cvevent{TensorFlow Developer Specialization}{DeepLearning.AI}{July 2020}{}
+    \item \cvevent{Deep Learning Specialisation}{DeepLearning.AI}{December 2020}{}
+    \item \cvevent{TensorFlow Developer Specialisation}{DeepLearning.AI}{July 2020}{}
 \end{itemize}
 
-\smallskip
-\cvsection{Extra-curricular}
-\begin{itemize}
-    \item Awarded black belt in Karate.
-    \item Achieved the Gold medal for Chess in Four Nations Championship 2019 organized by Pearson.
-    \item Represented secondary school at the national level for Karate, Carrom, Kabbadi and as an Army Cadet. 
-    \item Competed in Wushu, Volleyball, Swimming, Chess and Soccer during inter-house sport meets, winning various medals.
-    \item Won awards in inter-house drama and art competitions in secondary school.
-    \item Held various leadership positions in the secondary school as a junior prefect, senior prefect and Karate captain.
-\end{itemize}
-
-\smallskip
+\medskip
 
 \cvsection{Volunteer and Webinar hosting}
 \begin{itemize}
     \item Member of the teaching team for Code In Place 2021, an online Python course offered by Stanford University during the COVID-19 pandemic. 
-    \item Guest speaker of IEEE Hobnobbers 2021, sharing knowledge on the topic ``A dive into deep learning``
-    \item Guest speaker of Pie \& AI Sri Lankan session, organized by DeepLearning.AI, sharing knowledge on the topic ``An Introduction to AI and Machine Learning - Sinhala``
+    \item Guest speaker of IEEE Hobnobbers 2021, sharing knowledge on the topic ``A dive into deep learning. ``
+    \item Guest speaker of Pie \& AI Sri Lankan session, organised by DeepLearning.AI, on the topic ``An Introduction to AI and Machine Learning - Sinhala. ``
 \end{itemize}
 
-\smallskip
+\medskip
 
 \cvsection{Languages}
 
