Address CDES comments

--- a/main.tex
+++ b/main.tex
@@ -97,7 +97,24 @@
 
 A Machine Learning Engineer and a Researcher with 2+ years of experience in applied machine learning research and production-grade cloud-native application development. Currently working towards a Ph.D. in Bioengineering to contribute to the advancement of healthcare with the aid of Artificial Intelligence (AI). As an AI and technology enthusiast, I have guided university students on various occasions with one-to-one meetings, webinars and Medium articles.
 
-\bigskip
+\medskip
+
+\cvsection{Education}
+
+\cvevent{Ph.D. in Bioengineering}{University of Auckland}{Dec 2021 - Present}{Auckland, New Zealand}   % chktex 8
+\begin{itemize}
+    \item Analysing microstructures of Gastrointestinal sphincters and creating computational models with the aid of \emph{deep learning} to benefit in silico experiments in the future.
+\end{itemize}
+
+\divider{}
+
+\cvevent{B.Sc. (Hons.) in Software Engineering}{University of Kelaniya}{Feb 2016 - March 2020}{Kelaniya, Sri Lanka}   % chktex 8
+\begin{itemize}
+    \item Specialised in Data Science and Net-centric application development
+    \item Attained a GPA of 3.96 out of 4.00, obtaining a First Class.
+\end{itemize}
+
+\medskip
 
 \cvsection{Experience}
 
@@ -122,6 +139,17 @@ A Machine Learning Engineer and a Researcher with 2+ years of experience in appl
 
 \medskip
 
+% \pagebreak
+\cvsection{Certifications}
+
+\begin{itemize}
+    \item \cvevent{AI for Medical Diagnosis}{DeepLearning.AI}{May 2021}{}
+    \item \cvevent{Deep Learning Specialisation}{DeepLearning.AI}{December 2020}{}
+    \item \cvevent{TensorFlow Developer Specialisation}{DeepLearning.AI}{July 2020}{}
+\end{itemize}
+
+\medskip
+
 \cvsection{Skills}
 
 \begin{itemize}
@@ -131,39 +159,20 @@ A Machine Learning Engineer and a Researcher with 2+ years of experience in appl
     \item \textbf{DevOps} --- Linux, Azure, Kubernetes, Docker, Kustomize, JMeter
 \end{itemize}
 
-\pagebreak
-
-% \medskip
-
-\cvsection{Education}
-
-\cvevent{Ph.D. in Bioengineering}{University of Auckland}{Dec 2021 - Present}{Auckland, New Zealand}   % chktex 8
-\begin{itemize}
-    \item Analysing microstructures of Gastrointestinal sphincters and creating computational models with the aid of deep learning to benefit in silico experiments in the future.
-\end{itemize}
-
-\divider{}
-
-\cvevent{B.Sc. (Hons.) in Software Engineering}{University of Kelaniya}{Feb 2016 - March 2020}{Colombo, Sri Lanka}   % chktex 8
-\begin{itemize}
-    \item Specialised in Data Science and Net-centric application development
-    \item Attained a GPA of 3.96 out of 4.00, obtaining a First Class.
-    \item Placements in Dean’s List in all four academic years.
-    \item Member (2016-2018) and women's team captain (2018) in University Karate team, winning national and inter-university medals with merits. 
-    \item Lead the Marketing and Communication function of AIESEC in University of Kelaniya as the vice president (2018) to increase the growth rate.
-    \item Managed the financial and budgeting aspects as the organising committee finance lead in RealHack 2019 inter-university hackathon 
-    \item Awarded as the 4th Place team in DataStorm 2020 datathon organised by Octave (JKH Centre of Excellence for Big Data Analytics) and University of Moratuwa
-    \item Became the 1st Runner Up team in National Youth Software Competition 2017 organised by UNDP-Sri Lanka
-\end{itemize}
-
 \medskip
 
-\cvsection{Certifications}
-
+\cvsection{Achievements}
 \begin{itemize}
-    \item \cvevent{AI for Medical Diagnosis}{DeepLearning.AI}{May 2021}{}
-    \item \cvevent{Deep Learning Specialisation}{DeepLearning.AI}{December 2020}{}
-    \item \cvevent{TensorFlow Developer Specialisation}{DeepLearning.AI}{July 2020}{}
+    \item Placements in Dean’s List in all four academic years of B.Sc.
+    \item Awarded black belt in Karate.
+    \item Member (2016-2018) and women's team captain (2018) in the University of Kelaniya Karate team, winning national and inter-university medals with merits. 
+    \item Lead the Marketing and Communication function of AIESEC in University of Kelaniya as the vice president (2018) to increase the growth rate.
+    \item Managed the financial and budgeting aspects as the organising committee finance lead in RealHack 2019 inter-university hackathon.
+    \item Awarded as the 4th Place team in the DataStorm 2020 datathon organised by Octave (JKH Centre of Excellence for Big Data Analytics) and University of Moratuwa
+    \item Became the 1st Runner Up team in National Youth Software Competition 2017 organised by UNDP-Sri Lanka.
+    \item Achieved the Gold medal for Chess in Four Nations Championship 2019 organized by Pearson.
+    \item Represented secondary school at the national level for Karate, Carrom, Kabbadi and as an Army Cadet.
+    \item Held various leadership positions in the secondary school as a junior prefect, senior prefect and Karate captain.
 \end{itemize}
 
 \medskip
