Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -103,7 +103,7 @@ A Machine Learning Engineer and a Researcher with 2+ years of experience in appl
 
 \cvevent{Ph.D. in Bioengineering}{University of Auckland}{Dec 2021 - Present}{Auckland, New Zealand}   % chktex 8
 \begin{itemize}
-    \item Analysing microstructures of Gastrointestinal sphincters and creating computational models with the aid of \emph{deep learning} to benefit in silico experiments in the future.
+    \item Analysing microstructures of Gastrointestinal sphincters and creating computational models with the aid of \textbf{deep learning} to benefit in silico experiments in the future.
 \end{itemize}
 
 \divider{}
@@ -188,8 +188,8 @@ A Machine Learning Engineer and a Researcher with 2+ years of experience in appl
 
 \cvsection{Languages}
 
-\cvskill{Sinhala}{5}
 \cvskill{English}{4}
+\cvskill{Sinhala}{5}
 
 \vfill
 \begin{flushright}
