--- a/main.tex
+++ b/main.tex
@@ -95,7 +95,7 @@
 
 \cvsection{Summary}
 
-A Machine Learning Engineer and a Researcher with 2+ years of experience in applied machine learning research and production-grade cloud-native application development. Currently working towards a Ph.D. in Bioengineering to contribute to the advancement of healthcare with the aid of Artificial Intelligence (AI). As an AI and technology enthusiast, I have guided university students on various occasions with one-to-one meetings, webinars and Medium articles.
+A Machine Learning Engineer and a Researcher with 2+ years of experience in applied machine learning research and production-grade cloud-native application development. Currently working towards a Ph.D. in Bioengineering to contribute to the advancement of healthcare with the aid of Artificial Intelligence (AI). As an AI and technology enthusiast, if someone's face lit up with a smile because of a product I contributed to make, that will be my ultimate satisfaction.
 
 \medskip
 
