--- a/main.tex
+++ b/main.tex
@@ -95,7 +95,7 @@
 
 \cvsection{Summary}
 
-A Machine Learning Engineer and a Researcher with 2+ years of experience in applied machine learning research and production-grade cloud-native application development. Currently working towards a Ph.D. in Bioengineering to contribute to the advancement of healthcare with the aid of Artificial Intelligence (AI). As an AI and technology enthusiast, if someone's face lit up with a smile because of a product I contributed to make, that will be my ultimate satisfaction.
+A Machine Learning Engineer and a Researcher with 2+ years of experience in applied machine learning research and production-grade cloud-native application development. Currently working towards a Ph.D. in Bioengineering to contribute to the advancement of healthcare with the aid of Artificial Intelligence (AI). Seeing someone's face light up with a smile due to a product I helped create brings me ultimate satisfaction as an AI and tech enthusiast.
 
 \medskip
 
@@ -103,7 +103,10 @@ A Machine Learning Engineer and a Researcher with 2+ years of experience in appl
 
 \cvevent{Ph.D. in Bioengineering}{University of Auckland}{Dec 2021 - Present}{Auckland, New Zealand}   % chktex 8
 \begin{itemize}
-    \item Analysing microstructures of Gastrointestinal sphincters and creating computational models with the aid of \textbf{deep learning} to benefit in silico experiments in the future.
+    \item Analyse microstructures of upper gastrointestinal (GI) sphincters and develop computational models using novel imaging techniques and deep learning to improve understanding of GI disorders and benefit in silico experiments. %develop new treatments
+    % \item Developed and refined innovative machine learning pipeline to aid segmentation of anatomical structures in the stomach, achieving initial dice scores of 94.5\% and 81.9\% on test and new data, respectively.
+    % \item Quantified the orientations of muscle fibres within sphincters, providing a unique perspective to study functional disturbances associated with upper gastrointestinal tract disorders and resulting in the identification of key structural features that were used to develop a unified model.
+    % \item Collaborated with a multidisciplinary team of bioinformaticians and data scientists to develop an open-source platform that facilitates data sharing across institutions and promotes transparency in biomedical research. The platform has already been adopted by multiple labs at NIH, demonstrating its efficacy as an innovative tool for advancing scientific discoveries.
 \end{itemize}
 
 \divider{}
@@ -163,6 +166,7 @@ A Machine Learning Engineer and a Researcher with 2+ years of experience in appl
 
 \cvsection{Achievements}
 \begin{itemize}
+    \item Awarded as the 1st place team in SPARC FAIR codeathon 2022 organized jointly by SPARC Data and Resource Center and National Institutes of Health (NIH)
     \item Placements in Dean’s List in all four academic years of B.Sc.
     \item Awarded black belt in Karate.
     \item Member (2016-2018) and women's team captain (2018) in the University of Kelaniya Karate team, winning national and inter-university medals with merits. 
