Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -12,7 +12,6 @@
 
 % The paracol package lets you typeset columns of text in parallel
 \usepackage{paracol}
-
 \usepackage{setspace}
 
 % Change the font if you want to, depending on whether
@@ -103,10 +102,7 @@ A Machine Learning Engineer and a Researcher with 2+ years of experience in appl
 
 \cvevent{Ph.D. in Bioengineering}{University of Auckland}{Dec 2021 - Present}{Auckland, New Zealand}   % chktex 8
 \begin{itemize}
-    \item Analyse microstructures of upper gastrointestinal (GI) sphincters and develop computational models using novel imaging techniques and deep learning to improve understanding of GI disorders and benefit in silico experiments. %develop new treatments
-    % \item Developed and refined innovative machine learning pipeline to aid segmentation of anatomical structures in the stomach, achieving initial dice scores of 94.5\% and 81.9\% on test and new data, respectively.
-    % \item Quantified the orientations of muscle fibres within sphincters, providing a unique perspective to study functional disturbances associated with upper gastrointestinal tract disorders and resulting in the identification of key structural features that were used to develop a unified model.
-    % \item Collaborated with a multidisciplinary team of bioinformaticians and data scientists to develop an open-source platform that facilitates data sharing across institutions and promotes transparency in biomedical research. The platform has already been adopted by multiple labs at NIH, demonstrating its efficacy as an innovative tool for advancing scientific discoveries.
+    \item Analyse microstructures of upper gastrointestinal (GI) sphincters and develop computational models using novel imaging techniques and deep learning to improve understanding of GI disorders and benefit in silico experiments.
 \end{itemize}
 
 \divider{}
