Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -55,8 +55,8 @@
 \renewcommand{\itemmarker}{{\small\textbullet}}
 \renewcommand{\ratingmarker}{\faCircle}
 
-%% sample.bib contains your publications
-\addbibresource{publications.bib}
+% Contains your publications
+% \addbibresource{publications.bib}
 
 \begin{document}
 \name{Savindi Wijenayaka}
@@ -81,14 +81,9 @@
   \printinfo{\faMedium}{savindi-wijenayaka.medium.com}[https://savindi-wijenayaka.medium.com]
 %   \printinfo{\faGithub}{https://github.com/savindi-wijenayaka}[https://github.com/savindi-wijenayaka]
   }
-
-  %% You can add your own arbtrary detail with
-  %% \printinfo{symbol}{detail}[optional hyperlink prefix]
 }
 
 \makecvheader{}
-%% Depending on your tastes, you may want to make fonts of itemize environments slightly smaller
-% \AtBeginEnvironment{itemize}{\small}
 
 \medskip
 
@@ -162,13 +157,13 @@ A Machine Learning Engineer and a Researcher with 2+ years of experience in appl
 
 \cvsection{Achievements}
 \begin{itemize}
-    \item Awarded as the 1st place team in SPARC FAIR codeathon 2022 organized jointly by SPARC Data and Resource Center and National Institutes of Health (NIH)
+    \item Awarded as the 1st place team in SPARC FAIR codeathon 2022 organized jointly by SPARC Data and Resource Center and National Institutes of Health (NIH).
     \item Placements in Dean’s List in all four academic years of B.Sc.
     \item Awarded black belt in Karate.
     \item Member (2016-2018) and women's team captain (2018) in the University of Kelaniya Karate team, winning national and inter-university medals with merits. 
     \item Lead the Marketing and Communication function of AIESEC in University of Kelaniya as the vice president (2018) to increase the growth rate.
     \item Managed the financial and budgeting aspects as the organising committee finance lead in RealHack 2019 inter-university hackathon.
-    \item Awarded as the 4th Place team in the DataStorm 2020 datathon organised by Octave (JKH Centre of Excellence for Big Data Analytics) and University of Moratuwa
+    \item Awarded as the 4th Place team in the DataStorm 2020 datathon organised by Octave (JKH Centre of Excellence for Big Data Analytics) and University of Moratuwa.
     \item Became the 1st Runner Up team in National Youth Software Competition 2017 organised by UNDP-Sri Lanka.
     \item Achieved the Gold medal for Chess in Four Nations Championship 2019 organized by Pearson.
     \item Represented secondary school at the national level for Karate, Carrom, Kabbadi and as an Army Cadet.
