Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -95,14 +95,18 @@ A Machine Learning Engineer and a Researcher with 2+ years of experience in appl
 
 \cvsection{Education}
 
-\cvevent{Ph.D. in Bioengineering}{University of Auckland}{Dec 2021 - Present}{Auckland, New Zealand}   % chktex 8
+\cvevent{Ph.D. in Bioengineering}{University of Auckland}{Dec 2021 - Present}{Auckland, New Zealand}   
 \begin{itemize}
-    \item Analyse microstructures of upper gastrointestinal (GI) sphincters and develop computational models using novel imaging techniques and deep learning to improve understanding of GI disorders and benefit in silico experiments.
+    \item Analyzed gastric microstructures using an interdisciplinary approach integrating micro-CT imaging, mathematics, and deep learning, advancing the understanding of healthy stomachs.
+    \item Engineered a semantic segmentation model to distinguish gastric tissue layers, integrating multiscale channel and spatial attention concepts, implementing numerous ablation studies, and saving over 40 hours per dataset.
+    \item Developed a robust three-dimensional gastric tissue quantification framework using advanced mathematical techniques in Python; delivered precise measurements from 20+ tissue samples, establishing the first benchmark for future research.
+    \item Developed a comprehensive computational model compiling crucial geometric information alongside quantification details sourced from 8 distinct experiments, enabling future in-silico experiments.
+    \item Conducted biological experiments to collect and prepare rodent stomachs for micro CT imaging, resulting in a streamlined process that enhanced sample quality and consistency across 15 experimental trials.
 \end{itemize}
 
 \divider{}
 
-\cvevent{B.Sc. (Hons.) in Software Engineering}{University of Kelaniya}{Feb 2016 - March 2020}{Kelaniya, Sri Lanka}   % chktex 8
+\cvevent{B.Sc. (Hons.) in Software Engineering}{University of Kelaniya}{Feb 2016 - Mar 2020}{Kelaniya, Sri Lanka}   % chktex 8
 \begin{itemize}
     \item Specialised in Data Science and Net-centric application development
     \item Attained a GPA of 3.96 out of 4.00, obtaining a First Class.
@@ -138,7 +142,7 @@ A Machine Learning Engineer and a Researcher with 2+ years of experience in appl
 
 \begin{itemize}
     \item \cvevent{AI for Medical Diagnosis}{DeepLearning.AI}{May 2021}{}
-    \item \cvevent{Deep Learning Specialisation}{DeepLearning.AI}{December 2020}{}
+    \item \cvevent{Deep Learning Specialisation}{DeepLearning.AI}{Dec 2020}{}
     \item \cvevent{TensorFlow Developer Specialisation}{DeepLearning.AI}{July 2020}{}
 \end{itemize}
 
@@ -186,10 +190,10 @@ A Machine Learning Engineer and a Researcher with 2+ years of experience in appl
 \cvskill{English}{4}
 \cvskill{Sinhala}{5}
 
-\vfill
-\begin{flushright}
-\flushright
-\footnotesize{\emph{Last updated: ~\today }}
-\end{flushright}
+% \vfill
+% \begin{flushright}
+% \flushright
+% \footnotesize{\emph{Last updated: ~\today }}
+% \end{flushright}
 
 \end{document}
