Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -200,7 +200,7 @@ Machine Learning Engineer and Researcher with over two years of experience in ap
 
 \medskip
 \cvsection{References}
-Available upon request
+\textit{Available upon request.}
 
 % \vfill
 % \begin{flushright}
