Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -67,21 +67,13 @@
 % \photoR{3cm}{profile-photo}
 
 \personalinfo{%
-  \expandafter\ifstrequal\expandafter{\jobname}{savindi-cv}
-  {
-  \printinfo{\faMapMarker*}{Auckland, New Zealand}
-  \printinfo{\faGlobe}{https://savindi.carrd.co}[savindi.carrd.co]\\
-  \printinfo{\faLinkedin}{https://linkedin.com/in/savindi}[https://linkedin.com/in/savindi]
-  \printinfo{\faGithub}{https://github.com/savindi-wijenayaka}[https://github.com/savindi-wijenayaka]
-  }
   {
   \printinfo{\faPhone}{+64 22 453 8372}
   \printinfo{\faAt}{sabe848@aucklanduni.ac.nz}[mailto:sabe848@aucklanduni.ac.nz]
   \printinfo{\faMapMarker*}{Auckland, New Zealand}\\
-  \printinfo{\faGlobe}{savindi.carrd.co}[https://savindi.carrd.co]
+  \printinfo{\faGlobe}{savindi.com}[https://savindi.com]
   \printinfo{\faLinkedin}{linkedin.com/in/savindi}[https://linkedin.com/in/savindi]
   \printinfo{\faMedium}{savindi-wijenayaka.medium.com}[https://savindi-wijenayaka.medium.com]
-%   \printinfo{\faGithub}{https://github.com/savindi-wijenayaka}[https://github.com/savindi-wijenayaka]
   }
 }
 
