--- a/main.tex
+++ b/main.tex
@@ -116,7 +116,7 @@ Machine Learning Engineer and Researcher with over two years of experience in ap
     \item Researched, engineered and deployed the initial phase of Choreo's AI-assisted testing feature, using Python, Keras, Flask, Kubernetes and Azure DevOps pipelines.
     \item Architected, developed and deployed Choreo’s AI-based anomaly detector with two other engineers, using Azure solutions, Ballerina, and Python, while adhering to security best practices, scaling requirements, and optimised resource usage.
     \item Analysed Ballerina Language Server performance and identified the cause of a memory leak using JMeter and Eclipse Memory Analyser (MAT), which helped in the optimisation of resources in Choreo.
-    \item Contributed to automating the performance testing of Choreo by creating a library and a pipeline for system metrics collection using Python, Kusto, Seaborn, and Azure DevOps pipelines.
+    \item Contributed to automating the performance testing of Choreo by creating a library and a pipeline for system metrics collection using Python, Kusto Query Language (KQL), Seaborn, and Azure DevOps pipelines.
 \end{itemize}
 
 % \divider{}
